--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -52,10 +52,13 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i $PRIVATE_KEY ec2-user@18.212.71.119 << 'EOF'
-          cd real-estate-platform/backend
-          git pull origin main
-          npm install
-          pm2 restart all
-          exit
+          echo "$PRIVATE_KEY" > private-key.pem
+          chmod 600 private-key.pem
+          ssh -o StrictHostKeyChecking=no -i private-key.pem ec2-user@18.212.71.119 << 'EOF'
+            cd real-estate-platform/backend
+            git pull origin main
+            npm install
+            pm2 restart all
+            exit
           EOF
+          rm private-key.pem
